--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="scripts/client.js"></script>
     <!-- <script type="text/javascript" src="scripts/services/data.factory.js"></script> -->
     <script type="text/javascript" src="scripts/controllers/employee.controller.js"></script>
-    <!-- <script type="text/javascript" src="scripts/controllers/budget.controller.js"></script> -->
+    <script type="text/javascript" src="scripts/controllers/budget.controller.js"></script>
 </body>
 
 </html>
