add monthly salary

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
     <!-- <script type="text/javascript" src="scripts/services/data.factory.js"></script> -->
     <script type="text/javascript" src="scripts/controllers/employee.controller.js"></script>
     <script type="text/javascript" src="scripts/controllers/budget.controller.js"></script>
+    <script type="text/javascript" src="scripts/services/data.factory.js"></script>
+
+
 </body>
 
 </html>
